# python-web-hw10

./: README.md  pyproject.toml
quotes/: custom_migration.py
quotes/quotes/: settings.py  urls.py
quotes/quotes_app/: forms.py  models.py  urls.py  views.py
quotes/quotes_app/migrations/: 0001_initial.py
quotes/quotes_app/templates/quotes_app/: add_author.html  add_quote.html  add_tag.html  author.html  author_info.html  base.html  index.html  quote.html  tag.html  top_tags.html
quotes/quotes_app/templatetags/: extract_tags.py
quotes/users/: forms.py  models.py  urls.py  views.py
quotes/users/migrations/: 0001_initial.py
quotes/users/templates/users/: login.html  profile.html  signup.html
